<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout"
    android:theme="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingBottom="20dp">

        <EditText
            android:id="@+id/displayEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="0"
            android:ems="10"
            android:gravity="end"
            android:hint="@string/screen_hint"
            android:layout_span="4"
            android:textSize="40sp"
            android:inputType="numberDecimal" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:text="@string/button_clear"
            android:textSize="@dimen/buttons_textSize"
            style="?android:attr/buttonStyle"
            android:textColor="@color/textColor"/>

        <Button
            android:id="@+id/divideButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_div"
            android:textSize="@dimen/buttons_textSize"
            style="?android:attr/buttonStyle"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button7"
            android:textSize="@dimen/buttons_textSize"
            style="?android:attr/buttonStyle"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button8"
            android:textSize="@dimen/buttons_textSize"
            style="?android:attr/buttonStyle"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button9"
            android:textSize="@dimen/buttons_textSize"
            style="?android:attr/buttonStyle" />

        <Button
            android:id="@+id/multiplyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_mult"
            android:textSize="@dimen/buttons_textSize"
            style="?android:attr/buttonStyle"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button4"
            android:textSize="@dimen/buttons_textSize"
            style="?android:attr/buttonStyle"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button5"
            android:textSize="@dimen/buttons_textSize"
            style="?android:attr/buttonStyle"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button6"
            android:textSize="@dimen/buttons_textSize"
            style="?android:attr/buttonStyle"/>

        <Button
            android:id="@+id/subtractButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_minus"
            android:textSize="@dimen/buttons_textSize"
            style="?android:attr/buttonStyle"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button1"
            android:textSize="@dimen/buttons_textSize"
            style="?android:attr/buttonStyle"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button2"
            android:textSize="@dimen/buttons_textSize"
            style="?android:attr/buttonStyle"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button3"
            android:textSize="@dimen/buttons_textSize"
            style="?android:attr/buttonStyle"/>

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_plus"
            android:textSize="@dimen/buttons_textSize"
            style="?android:attr/buttonStyle"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/button0"
            android:textSize="@dimen/buttons_textSize"
            style="?android:attr/buttonStyle"/>

        <Button
            android:id="@+id/dotButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_dot"
            android:textSize="@dimen/buttons_textSize"
            style="?android:attr/buttonStyle"/>

        <Button
            android:id="@+id/equalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_equal"
            android:textSize="@dimen/buttons_textSize"
            style="?android:attr/buttonStyle"/>

    </TableRow>
</TableLayout>